--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-sonner": "^2.0.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
