--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-sonner": "^2.0.0"
+    "vue-sonner": "^2.0.0",
+    "vue3-lottie": "^3.3.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
